# webserv

./: 16page.html  CMakeLists.txt  Makefile  README.md  Structure.txt  VLGR.txt  chunked.html  conf_example.conf  doc.txt  test_delete.html  test_delete2.html  test_upload.html  toughts.txt  unknown.html  uploadpage.html  user_input.txt  webserv
Config/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  ErrorCodes.cpp  ErrorCodes.hpp  Location.cpp  Location.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Server2.cpp  Server2.hpp  Server_org.cpp  bchunk.sh  bek.conf  delete.sh  example.txt  file.txt  file1.txt  filename  kris.conf  krishome.conf  main.cpp  mainIn.hpp  midfile.txt  output_file0.0.0.0  request.txt  run.sh  ser  server  t.conf  test.conf  tmp.cpp  user_input.txt  valdata.txt  webserv
Config/cFiles/: default_conf.conf  not_correct.conf
Config/cgi-bin/: script.py  script_get.py  script_timeout.py
Config/test_file_upl/: index.html
error_pages/: 400.html  404.html  405.html  413.html
ex/: a.out  server.cpp  servers
form_website/: form.html
marie/: index.html
root/: test_delete.html  test_upload.html  uploadpage.html  user_input.txt
root/cFiles/: codespace.conf  default_conf.conf  kris.conf  krishome.conf  not_correct.conf  ref_codespace.conf  return.conf
src/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  ErrorCodes.cpp  ErrorCodes.hpp  Location.cpp  Location.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  main.cpp  mainIn.hpp  run.sh  webserv
test/: form2.html  script2.py
(+11 files in other folders)
